--- a/WpfApp1/App.config
+++ b/WpfApp1/App.config
@@ -11,6 +11,7 @@
         <add name="WpfApp1.Properties.Settings.proyectoConnectionString"
             connectionString="server=localhost;user id=root;database=proyecto"
             providerName="MySql.Data.MySqlClient" />
+        <add name="WpfApp1.Properties.Settings.test" connectionString="server=192.168.1.73;user id=root;database=proyecto" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
