--- a/WpfApp1/Properties/Settings.settings
+++ b/WpfApp1/Properties/Settings.settings
@@ -21,5 +21,12 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">server=localhost;user id=root;database=proyecto</Value>
     </Setting>
+    <Setting Name="test" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;server=192.168.1.73;user id=root;database=proyecto&lt;/ConnectionString&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">server=192.168.1.73;user id=root;database=proyecto</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
